--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     },
     {
       "source": "/(.*)",
-      "destination": "/client/index.html"
+      "destination": "/client/dist/index.html"
     }
   ]
 }
