--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
       "destination": "/server/index.js"
     },
     {
-      "source": "/(.*)",
+      "source": "/((?!assets/|src/).*)", 
       "destination": "/client/dist/index.html"
     }
   ]
