package.json file changed

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "stocksync-root",
   "version": "1.0.0",
   "scripts": {
-    "build": "cd client && npm install && npm run build",
-    "install-all": "npm install && cd client && npm install && cd ../server && npm install"
-  }
+  "build": "cd client && npm install --legacy-peer-deps && npm run build",
+  "install-all": "npm install --legacy-peer-deps && cd client && npm install --legacy-peer-deps && cd ../server && npm install"
 }
