--- a/package.json
+++ b/package.json
@@ -1,8 +1,23 @@
 {
-  "name": "stocksync-root",
+  "name": "server",
   "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-  "build": "cd client && npm install --legacy-peer-deps && npm run build",
-  "install-all": "npm install --legacy-peer-deps && cd client && npm install --legacy-peer-deps && cd ../server && npm install"
-}
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "joi": "^18.0.2",
+    "mongoose": "^9.1.5",
+    "multer": "^2.0.2",
+    "nodemon": "^3.1.11",
+    "pdfkit": "^0.17.2",
+    "tesseract.js": "^7.0.0"
+  }
 }
